Fixing layout bug

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -28,25 +28,21 @@
 
 #activities_section {
   background-color: #FFFFCC;
-  margin-right: 15px;
   border: 1px solid #FFCD00;
 }
 
 #tasks_section {
   background-color: #FFFFCC;
-  margin-right: 15px;
   border: 1px solid #FFCD00;
 }
 
 #vices_section {
   background-color: #F1CED5;
-  margin-right: 15px;
   border: 1px solid #BA0C2F;
 }
 
 #cards_section {
   background-color: #F1CED5;
-  margin-right: 15px;
   border: 1px solid #BA0C2F;
 }
 
